# tennisball_demo_v2

./: CMakeLists.txt  README.md  package.xml
config/: gazebo_pid.yaml  vision.yaml
include/launch/: demo.launch
launch/: load_ur5e_camera_gripper.launch  real_robot_camera.launch  real_robot_camera_rviz.launch  ur5e_camera_gripper.launch  ur5e_full.launch  ur5e_gazebo.launch  ur5e_gripper.launch
robot_description/meshes/: cameraD455_UR5e.STL
robot_description/urdf/: camera_gripper.xacro  load_ur5e_camera_gripper.xacro  ur5e_camera_gripper.xacro  ur5e_full.xacro  ur5e_fullmodel.urdf  ur5e_gripper.xacro
rviz/: real_ur5e_camera.rviz  ur5e_gripper.rviz
scripts/: detector.py  detector2.py  detector3.py
src/: get_robot_info.cpp  ur5e_add_obstacle.cpp  ur5e_home.cpp  ur5e_motion.cpp  ur5e_multi_pose_motion.cpp  ur5e_single_pose_motion.cpp
ur5e_calibration/: ur5e_robot_calibration.yaml
